hide events until loading is finished to avoid UI flickering

--- a/public/style.css
+++ b/public/style.css
@@ -50,6 +50,10 @@ body {
     font-weight: bold;
 }
 
+.event.hidden {
+    display: none;
+}
+
 .day.previousMonth,
 .day.nextMonth {
     background: lightgray;
